# Azathoth

./: .gitignore  .gitmodules  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
include/Application/: Application.hpp  ApplicationProxy.hpp  IApplication.hpp
include/Camera/: Camera.hpp
include/DebugTools/OpenGLTools/: ErrorCallback.hpp  OpenGLTools.hpp
include/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
include/GraphicApiFactory/: FactoryGLFW.hpp  IGraphicApiFactory.hpp  OpenGLFactory.hpp
include/Gui/: IGui.hpp  ImGuiLayerGLFW.hpp  ImGuiOpenGL.hpp
include/Input/: GlfwWindowInput.hpp  Input.h  KeyCodes.hpp  MouseCodes.hpp  WindowInpuGLFW.hpp
include/Layers/: Layer.hpp  LayerStack.hpp
include/Logger/: ILogger.hpp  Logger.hpp  SpdLogger.hpp  SpdLoggerProxy.hpp
include/Object/: Object.hpp  ObjectElements.hpp
include/OpenGL/Camera/: CameraManipulatorOpenGL.hpp  CameraOpenGL.hpp
include/OpenGL/GraphicApiFactory/: FactoryGLFW.hpp
include/OpenGL/Gui/: ImGuiLayerGLFW.hpp
include/OpenGL/Input/: WindowInpuGLFW.hpp
include/OpenGL/Object/: GameObjectOpenGL.hpp  PipeElements.hpp
include/OpenGL/Renderer/: BasicMesh.hpp  GraphicsContextOpenGL.hpp  IndexBufferOpenGL.hpp  RendererApiOpenGL.hpp  ShaderOpenGL.hpp  VertexArrayOpenGL.hpp  VertexBufferOpenGL.hpp
include/OpenGL/Window/: WindowGLFW.hpp
include/Renderer/: BufferLayout.hpp  GraphicsContextOpenGL.hpp  IGraphicsContext.hpp  IIndexBuffer.hpp  IRenderer.hpp  IShader.hpp  IVertexBuffer.hpp  IndexBuffer.hpp  RenderCommand.hpp  Renderer.hpp  RendererAPI.hpp  Shader.hpp  VertexArray.hpp  VertexBuffer.hpp
include/Texture/: Texture.h
include/Tools/: AzathothAssert.hpp  File.hpp  FunctionBinder.hpp  config.h.in
include/Window/: IWindow.hpp  OpenGLWindow.hpp  WindowGLFW.hpp
shaders/: shader.frag  shader.vert  shaderColored.frag  shaderColored.vert
src/: CMakeLists.txt
src/Application/: Application.cpp  CMakeLists.txt
src/DebugTools/: CMakeLists.txt
src/DebugTools/OpenGLTools/: CMakeLists.txt  ErrorCallback.cpp  OpenGLTools.cpp
src/Events/: CMakeLists.txt
src/GraphicApiFactory/: CMakeLists.txt
src/Gui/: CMakeLists.txt  ImGuiLayerGLFW.cpp  ImGuiOpenGL.cpp
src/Input/: CMakeLists.txt  GlfwWindowInput.cpp  WindowInpuGLFW.cpp
src/Layers/: CMakeLists.txt  Layer.cpp  LayerStack.cpp
src/Logger/: CMakeLists.txt  SpdLogger.cpp  SpdLoggerProxy.cpp
src/OpenGL/: AzathothOpenGL.hpp  CMakeLists.txt
src/OpenGL/Camera/: CMakeLists.txt  CameraManipulatorOpenGL.cpp  CameraOpenGL.cpp
src/OpenGL/DebugTools/: CMakeLists.txt  OpenGLTools.cpp
src/OpenGL/GraphicApiFactory/: CMakeLists.txt
src/OpenGL/Gui/: CMakeLists.txt  ImGuiLayerGLFW.cpp
src/OpenGL/Input/: CMakeLists.txt  WindowInpuGLFW.cpp
src/OpenGL/Object/: CMakeLists.txt  GameObject.cpp  PipeElements.cpp
src/OpenGL/Renderer/: BasicMesh.cpp  CMakeLists.txt  GraphicsContextOpenGL.cpp  IndexBufferOpenGL.cpp  RendererApiOpenGL.cpp  Shader.cpp  ShaderOpenGL.cpp  VertexArrayOpenGL.cpp  VertexBufferOpenGL.cpp
src/OpenGL/Tools/: CMakeLists.txt  OpenGLTools.cpp
src/OpenGL/Window/: CMakeLists.txt  WindowGLFW.cpp
src/Renderer/: CMakeLists.txt  GraphicsContextOpenGL.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  VertexBuffer.cpp
src/Texture/: CMakeLists.txt  Texture.cpp
src/Tools/: CMakeLists.txt  File.cpp
src/Window/: CMakeLists.txt  OpenGLWindow.cpp  WindowGLFW.cpp
